<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMainActivity"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/linear_layout_ma"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registry_text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:maxLength="21"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:met_floatingLabel="highlight"></com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/firstname_text"
            android:inputType="textPersonName"
            android:maxLength="31"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:met_floatingLabel="highlight">></com.rengwuxian.materialedittext.MaterialEditText>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:enabled="false"
                android:hint="@string/date_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:met_floatingLabel="highlight">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <Button
                android:id="@+id/btn_date"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_style"
                android:text="@string/btn_date_text"
                android:textAppearance="@style/TextAppearance.Compat.Notification"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:maxLength="21"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:met_floatingLabel="highlight">></com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/check_password_text"
            android:inputType="textPassword"
            android:maxLength="21"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:met_floatingLabel="highlight">></com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:id="@+id/btn_register"
            style="@android:style/Widget.Material.Button"
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_style"
            android:enabled="false"
            android:text="@string/btn_registry_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/viptigo"
        android:textSize="50dp" />

</RelativeLayout>